syntax = "proto3";

packagekotha;

import "buf/validate/validate.proto";

service KothaService {
  // Streams audio chunks from the client and gets a single response.
  // This is the ideal method for dictation to reduce latency and memory usage.
  rpc TranscribeStream(stream AudioChunk) returns (TranscriptionResponse);

  // Note Service
  rpc CreateNote(CreateNoteRequest) returns (Note);
  rpc GetNote(GetNoteRequest) returns (Note);
  rpc ListNotes(ListNotesRequest) returns (ListNotesResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (Note);
  rpc DeleteNote(DeleteNoteRequest) returns (Empty);

  // Interaction Service
  rpc CreateInteraction(CreateInteractionRequest) returns (Interaction);
  rpc GetInteraction(GetInteractionRequest) returns (Interaction);
  rpc ListInteractions(ListInteractionsRequest) returns (ListInteractionsResponse);
  rpc UpdateInteraction(UpdateInteractionRequest) returns (Interaction);
  rpc DeleteInteraction(DeleteInteractionRequest) returns (Empty);

  // Dictionary Service
  rpc CreateDictionaryItem(CreateDictionaryItemRequest) returns (DictionaryItem);
  rpc ListDictionaryItems(ListDictionaryItemsRequest) returns (ListDictionaryItemsResponse);
  rpc UpdateDictionaryItem(UpdateDictionaryItemRequest) returns (DictionaryItem);
  rpc DeleteDictionaryItem(DeleteDictionaryItemRequest) returns (Empty);

  // User Data Service
  rpc DeleteUserData(DeleteUserDataRequest) returns (Empty);

  // Advanced Settings Service
  rpc GetAdvancedSettings(GetAdvancedSettingsRequest) returns (AdvancedSettings);
  rpc UpdateAdvancedSettings(UpdateAdvancedSettingsRequest) returns (AdvancedSettings);
}

// =================================================================
// Messages
// =================================================================

// General
// -----------------------------------------------------------------
message Empty {}

// Error Types
// -----------------------------------------------------------------
enum ClientProvider {
  GROQ = 0;
}

enum ErrorType {
  CONFIGURATION = 0;
  AVAILABILITY = 1;
  AUDIO = 2;
  API = 3;
}

message ClientError {
  string code = 1;
  ErrorType type = 2;
  string message = 3;
  ClientProvider provider = 4;
  map<string, string> details = 5;
}

// Transcription
// -----------------------------------------------------------------
// A chunk of audio data for streaming.
message AudioChunk {
  bytes audio_data = 1 [(buf.validate.field).bytes.max_len = 1048576]; // 1 MB limit per chunk
}

// The response message containing the final transcript.
message TranscriptionResponse {
  string transcript = 1;
  ClientError error = 2;
}

// Notes
// -----------------------------------------------------------------
message Note {
  string id = 1;
  string user_id = 2;
  string interaction_id = 3;
  string content = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message CreateNoteRequest {
  string id = 1;
  string interaction_id = 2;
  string content = 3;
}

message GetNoteRequest {
  string id = 1;
}

message ListNotesRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListNotesResponse {
  repeated Note notes = 1;
}

message UpdateNoteRequest {
  string id = 1;
  string content = 2;
}

message DeleteNoteRequest {
  string id = 1;
}

// Interactions
// -----------------------------------------------------------------
message Interaction {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string asr_output = 4; // JSON string
  string llm_output = 5; // JSON string
  bytes raw_audio = 6 [(buf.validate.field).bytes.max_len = 100000000]; // 100 MB limit
  int32 duration_ms = 7; // Duration in milliseconds
  string created_at = 8;
  string updated_at = 9;
  string deleted_at = 10;
}

message CreateInteractionRequest {
  string id = 1;
  string title = 2;
  string asr_output = 3;
  string llm_output = 4;
  bytes raw_audio = 5 [(buf.validate.field).bytes.max_len = 100000000]; // 100 MB limit
  int32 duration_ms = 6; // Duration in milliseconds
}

message GetInteractionRequest {
  string id = 1;
}

message ListInteractionsRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListInteractionsResponse {
  repeated Interaction interactions = 1;
}

message UpdateInteractionRequest {
  string id = 1;
  string title = 2;
}

message DeleteInteractionRequest {
  string id = 1;
}

// Dictionary
// -----------------------------------------------------------------
message DictionaryItem {
  string id = 1;
  string user_id = 2;
  string word = 3;
  string pronunciation = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message CreateDictionaryItemRequest {
  string id = 1;
  string word = 2;
  string pronunciation = 3;
}

message ListDictionaryItemsRequest {
  string since_timestamp = 1; // Optional. ISO 8601 format. If not provided, fetch all.
}

message ListDictionaryItemsResponse {
  repeated DictionaryItem items = 1;
}

message UpdateDictionaryItemRequest {
  string id = 1;
  string word = 2;
  string pronunciation = 3;
}

message DeleteDictionaryItemRequest {
  string id = 1;
}

// User Data
// -----------------------------------------------------------------
message DeleteUserDataRequest {
  // Empty - user_id will be extracted from the authenticated user's token
}

// Advanced Settings
// -----------------------------------------------------------------
message LlmSettings {
  string asr_model = 1;
}

message AdvancedSettings {
  string id = 1;
  string user_id = 2;
  string created_at = 3;
  string updated_at = 4;
  LlmSettings llm = 5;
}

message GetAdvancedSettingsRequest {
  // Empty - user_id will be extracted from the authenticated user's token
}

message UpdateAdvancedSettingsRequest {
  LlmSettings llm = 1;
}